[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/main_menu.gd" type="Script" id=1]
[ext_resource path="res://menus/MenuBase.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuBase" parent="." instance=ExtResource( 2 )]

[node name="cryrochamber" parent="MenuBase" index="1"]
visible = true

[node name="New" type="Button" parent="."]
margin_left = 270.0
margin_top = 140.0
margin_right = 380.0
margin_bottom = 180.0
text = "New Game"

[node name="Continue" type="Button" parent="."]
margin_left = 270.0
margin_top = 190.0
margin_right = 380.0
margin_bottom = 230.0
text = "Continue"

[node name="Credits" type="Button" parent="."]
margin_left = 270.0
margin_top = 270.0
margin_right = 380.0
margin_bottom = 310.0
text = "Credits"
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]

[editable path="MenuBase"]
